# overlord

./: .env  .gitignore  .gitmodules  .roomodes  .scalafmt.conf  LICENSE  README.md  build-local.sh  build.sbt  build_overlord  ikuy.code-workspace  myir.svd  overlord.build_artifacts.txt  overlord.code-workspace  overlord_devcontainer.code-workspace  prefabs.toml  setup-overlord-path.sh
catalogs/socs/zynqps8/software/libs/i2c/: CMakeLists.txt
catalogs/socs/zynqps8/software/libs/xilinx/: CMakeLists.txt
catalogs/socs/zynqps8/software/libs/xilinx/include/: xparameters.h
catalogs/socs/zynqps8/software/libs/xilinx/include/a53/: xil_cache.h  xil_exception.h  xil_smc.h  xpseudo_asm_gcc.h  xtime_l.h
catalogs/socs/zynqps8/software/libs/xilinx/include/emacps/: xemacps.h  xemacps_bd.h
catalogs/socs/zynqps8/software/libs/xilinx/include/iicps/: xiicps.h
catalogs/socs/zynqps8/software/libs/xilinx/include/sdps/: xsdps_hw.h
catalogs/socs/zynqps8/software/libs/xilinx/src/a53/: xil_spinlock.c
catalogs/socs/zynqps8/software/libs/xilinx/src/emacps/: xemacps_bdring.c  xemacps_control.c  xemacps_sinit.c
catalogs/socs/zynqps8/software/libs/xilinx/src/iicps/: xiicps.c  xiicps_hw.c  xiicps_intr.c  xiicps_master.c
catalogs/socs/zynqps8/software/libs/xilinx/src/scugic/: xscugic_intr.c  xscugic_selftest.c
catalogs/socs/zynqps8/software/libs/xilinx/src/sdps/: xsdps_card.c  xsdps_g.c  xsdps_options.c
catalogs/socs/zynqps8/software/libs/xilinx/src/ttcps/: xttcps.h
catalogs/socs/zynqps8/software/programs_a53/ikuy_boot/: CMakeLists.txt
catalogs/socs/zynqps8/software/programs_a53/ikuy_boot/src/: debug_script.tcl  handoff.S  pmu.hpp  vector_table.S
catalogs/socs/zynqps8/software/programs_a53/ikuy_boot/src/kv260/: clock_init.c  ddr_init.c  ddr_qos.c  misc_init.c  psu_init.c  register_sanity_check.c  serdes_init.c
catalogs/socs/zynqps8/software/programs_pmu/pmu_monitor/: CMakeLists.txt
catalogs/socs/zynqps8/software/programs_pmu/pmu_monitor/src/: boot.S  host_interface.cpp  host_interface.hpp  rom_extensions.h
catalogs/socs/zynqps8/software/programs_pmu/pmu_monitor/src/interrupts/: interrupts.cpp  interrupts.hpp
catalogs/socs/zynqps8/software/programs_pmu/pmu_monitor/src/os/: os_boot.cpp  os_cpu.cpp
catalogs/software/libs/data_binify/: CMakeLists.txt
catalogs/software/libs/data_binify/include/data_binify/: write_helper.hpp
catalogs/software/libs/data_binify/src/: binify.hpp  driver.hpp
catalogs/software/libs/gpio/: CMakeLists.txt
catalogs/software/libs/gpio/include/gpio/: gpio.hpp
catalogs/software/libs/gpio/src/zynqmp/: gpio.cpp
catalogs/software/libs/luau_vm/: CMakeLists.txt
catalogs/software/libs/luau_vm/include/luau_vm/: lua.h
catalogs/software/libs/luau_vm/src/: lapi.cpp  laux.cpp  lbaselib.cpp  lbuiltins.cpp  ldblib.cpp  ldo.cpp  lgc.cpp  lgcdebug.cpp  lmathlib.cpp  lnumprint.cpp  lnumutils.h  loslib.cpp  lperf.cpp  lvmutils.cpp
catalogs/software/libs/luau_vm/src/Ast/: Common.h
catalogs/software/libs/utils/: CMakeLists.txt
catalogs/software/libs/utils/include/utils/: array_utils.hpp  boot_psi.h
catalogs/software/libs/utils/src/aarch64/: busy_sleep.c
definitions/socs/zynqps8/software/libs/triple_timer_counter/: CMakeLists.txt
definitions/software/libs/fatfs/: CMakeLists.txt
definitions/software/libs/fatfs/include/fatfs/: fatfs.h
definitions/software/libs/fatfs/src/: fatfs.c
definitions/software/libs/fatfs/src/zynqmp/: sdcard.h
definitions/software/libs/gfx2d_cpu/: CMakeLists.txt
definitions/software/libs/gfx2d_cpu/include/gfx2d_cpu/: cpu_sprite_layer.hpp  sprite_cpu.hpp
definitions/software/libs/image_io/: CMakeLists.txt
definitions/software/libs/image_io/include/image_io/: loader.h
definitions/software/libs/image_io/src/: saver.c  tiny_ktx.h
ikuy_std_resource/catalogs/software/libs/gfx2d/: CMakeLists.txt
ikuy_std_resource/catalogs/software/libs/image/: CMakeLists.txt
ikuy_std_resource/catalogs/software/libs/image/include/image/: copy.h
ikuy_std_resource/catalogs/software/libs/luau_utils/: CMakeLists.txt
ikuy_std_resources/definitions/software/libs/musl_math/: CMakeLists.txt
ikuy_std_resources/definitions/software/libs/musl_math/src/: nearbyintl.c
ikuy_std_resources/definitions/software/libs/platform/: CMakeLists.txt
ikuy_std_resources/definitions/software/libs/platform/include/platform/: memory_map_percpu.h
ikuy_std_resources/definitions/software/libs/platform/include/platform/host/: host_platform_linux.h
ikuy_std_resources/definitions/software/libs/platform/src/host/: backward.cpp
ikuy_std_resources/definitions/software/libs/platform/src/microblaze/: disable_exceptions.S
ikuy_std_resources/definitions/software/libs/tiny_image_format/: CMakeLists.txt
src/main/resources/catalogs/software/libs/data_binify/: CMakeLists.txt
src/main/resources/catalogs/software/libs/data_binify/src/: ast.hpp  binify.cpp  binify.hpp  lexer.l  parser.cpp  parser.hpp  parser.y  scanner.cpp  scanner.h  scanner.hpp  write_helper.cpp  writehelper.cpp
src/main/resources/catalogs/software/libs/dbg/: CMakeLists.txt
src/main/resources/catalogs/software/libs/dbg/src/: assert.c
src/main/resources/catalogs/software/libs/gfxdebug/: CMakeLists.txt
src/main/resources/catalogs/software/libs/gfxdebug/src/: console.cpp  rgba8.cpp
src/main/resources/catalogs/software/libs/host_os/: CMakeLists.txt
src/main/resources/catalogs/software/libs/host_os/src/: file.c  filesystem.cpp  osvfile.c  vfile.c
src/main/resources/catalogs/software/libs/luau/: CMakeLists.txt  luau.toml
src/main/resources/catalogs/software/libs/luau_vm/: CMakeLists.txt
src/main/resources/catalogs/software/libs/luau_vm/src/: ldebug.cpp  lstring.h  (+2 more)
src/main/resources/catalogs/software/libs/resource_bundle_writer/: CMakeLists.txt
src/main/resources/catalogs/software/libs/utils/: CMakeLists.txt
src/main/resources/catalogs/software/programs/image_convert/: CMakeLists.txt
src/main/resources/catalogs/software/programs_host/image_convert/: CMakeLists.txt  image_convert.toml
src/main/resources/software/bootrom/: CMakeLists.txt  crt_riscv32noneelf.S  main.c
(+1648 files in other folders)
